@@ -147,8 +147,9 @@ of responses, from the daemon and interprets it as though it were a
 query response (the return value is as for a query).
 <function>gps_poll()</function> returns the validity mask of the
 received structure.  This function does a blocking read waiting for
-data from the daemon; it returns 0 for success, or -1 on a Unix-level
-read error. </para>
+data from the daemon; it returns 0 for success, -1 with errno set on a 
+Unix-level read error, -1 with errno not set if the socket to
+the daemon has closed. </para>
 
 <para><function>gps_waiting()</function> can be used to check
 whether there is data from the daemon. It returns true if there is,
